--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ footer {
 	<a class="btn btn-primary" href="https://ko-fi.com/jerrytoaster556" role="Donate">Donate</a>
         <p>&nbsp;</p>
 				
-<h1><span style="text-decoration: underline;">Recommended Games</span></h1>
+<h1><span style="text-decoration: underline;">Board Games</span></h1>
 		<p>&nbsp;</p>
 
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
@@ -162,6 +162,33 @@ footer {
     <h5 class="card-title">Chess AI<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play CAI Now</p>
     <a href="https://unblocked-x.com/sites/chess-ai-main/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://play-lh.googleusercontent.com/awnMYM2mV5wCu3O40zKhvCi9jxgdwlimYpISaIof2CynLspnWtvPYitjJFi8ytl9-Q" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Solitaire<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Solitaire Now</p>
+    <a href="https://unblocked-x.com/sites/games/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://play-lh.googleusercontent.com/EupXg549yzPYuIxwofePL6BdGwn-zXby4Vt36TdleNf4OW2GGqmFZ8HLsHfJA75hg96l" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">The Cube<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play TC Now</p>
+    <a href="https://unblocked-x.com/sites/the-cube/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://codersblock.com/assets/images/blog/align-4-v3.jpg" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Align 4<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Align 4 Now</p>
+    <a href="https://unblocked-x.com/sites/project000001352/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
 		
@@ -179,14 +206,7 @@ footer {
   </div>
 </div>
 	
-		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://play-lh.googleusercontent.com/EupXg549yzPYuIxwofePL6BdGwn-zXby4Vt36TdleNf4OW2GGqmFZ8HLsHfJA75hg96l" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">The Cube<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Play TC Now</p>
-    <a href="https://unblocked-x.com/sites/the-cube/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
-  </div>
-</div>
+		
 		
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
      crossorigin="anonymous"></script>
@@ -255,14 +275,7 @@ footer {
 	
 		
 		
-		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://codersblock.com/assets/images/blog/align-4-v3.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Align 4<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Play Align 4 Now</p>
-    <a href="https://unblocked-x.com/sites/project000001352/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
-  </div>
-</div>
+		
 		
 		
 		
@@ -301,14 +314,7 @@ footer {
 		
 		
 		
-		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://play-lh.googleusercontent.com/awnMYM2mV5wCu3O40zKhvCi9jxgdwlimYpISaIof2CynLspnWtvPYitjJFi8ytl9-Q" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title">Solitaire<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Play Solitaire Now</p>
-    <a href="https://unblocked-x.com/sites/games/dist/index.html" class="btn btn-primary" target="_blank">Play Now</a>
-  </div>
-</div>
+		
 		
 
 <div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
