--- a/index.html
+++ b/index.html
@@ -183,6 +183,17 @@ footer {
   </div>
 </div>
 		
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1316476333141866"
+     crossorigin="anonymous"></script>
+<!-- bigger cube ads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:288px;height:355px"
+     data-ad-client="ca-pub-1316476333141866"
+     data-ad-slot="7009633736"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://codersblock.com/assets/images/blog/align-4-v3.jpg" class="card-img-top" alt="...">
   <div class="card-body">
