--- a/index.html
+++ b/index.html
@@ -204,7 +204,14 @@ footer {
 </div>
 		
 		
-		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://media.istockphoto.com/photos/monopoly-board-game-box-picture-id458577337?k=20&m=458577337&s=170667a&w=0&h=FB7Sxh9ZuTrjkR4YiKDTuo6pzFx9dYKMkn0lXdb9jHA=" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Monopoly<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Monopoly Now</p>
+    <a href="https://unblocked-x.com/sites/monopoly/" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
 		
 	
 		
