--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@ footer {
           <a class="nav-link" style="color:white" href="https://chansite2.ducks-shitposts.repl.co/">bpforum</a>
         </li>
 		
+		<li class="nav-item">
+          <a class="nav-link" style="color:white" href="https://join.slack.com/t/unblockedchatgroup/shared_invite/zt-1h366fgkm-fYx3ue5kEDGZepHpLKLXug">Slack Chat</a>
+        </li>
+		
       </ul>
     </div>
   </nav>
