--- a/index.html
+++ b/index.html
@@ -158,6 +158,19 @@ footer {
 	<a class="btn btn-primary" href="./sites/chat.html" role="Chat with users">Chat with users</a>
 	<a class="btn btn-primary" href="https://ko-fi.com/jerrytoaster556" role="Donate">Donate</a>
         <p>&nbsp;</p>
+		
+		<h1><span style="text-decoration: underline;">Made by us</span></h1>
+		<p>&nbsp;</p>
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://unblocked-x.com/assets/cai.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">defcry<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play defcry Now</p>
+    <a href="https://unblocked-x.com/sites/defcry/index.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
 				
 <h1><span style="text-decoration: underline;">Board Games</span></h1>
 		<p>&nbsp;</p>
