--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ footer {
 		<p>&nbsp;</p>
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://unblocked-x.com/assets/cai.png" class="card-img-top" alt="...">
+  <img src="https://unblocked-x.com/assets/1rpRCj.png" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">defcry<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play defcry Now</p>
