--- a/nlauncher.html
+++ b/nlauncher.html
@@ -30,7 +30,7 @@
   <meta name="author" content="NLauncher">
 	
 	
-<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/Lua-Logo.png"/>
+<link rel="shortcut icon" type="image/png" href="https://unblocked-x.com/nlauncher.png"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -110,7 +110,7 @@ footer {
 <section class="rounded">
 	<article>
 		
- <h1 style="text-align: center;"> <img src="https://unblocked-x.com/Lua-Logo.png" alt="lua" width="90" height="90" /> The LuaInt Lua Interpreter</h1>
+ <h1 style="text-align: center;"> <img src="https://unblocked-x.com/nlauncher.png" alt="lua" width="90" height="90" /> The NLauncher Tool Library</h1>
 		<p style="text-align: center;">LuaInt is a simple, fast and effective lua interpreter written in C# and powered with MoonSharp.</p>
 		<p style="text-align: center;"><b>without requiring admin</b></p>
 		<p style="text-align: center;"><a style="text-align: center;" href="https://www.moonsharp.org/">MoonSharp Documentation</a> • <a style="text-align: center;" href="http://www.lua.org/manual/5.2/">Lua Documentation</a></p>
