--- a/nlauncher.html
+++ b/nlauncher.html
@@ -111,9 +111,8 @@ footer {
 	<article>
 		
  <h1 style="text-align: center;"> <img src="https://unblocked-x.com/Assets/nlauncher.png" alt="lua" width="90" height="90" /> The NLauncher Tool Library</h1>
-		<p style="text-align: center;">LuaInt is a simple, fast and effective lua interpreter written in C# and powered with MoonSharp.</p>
+		<p style="text-align: center;">NLauncher is a tool library filled with tools like wifi accelerators, a website stealer, and more..</p>
 		<p style="text-align: center;"><b>without requiring admin</b></p>
-		<p style="text-align: center;"><a style="text-align: center;" href="https://www.moonsharp.org/">MoonSharp Documentation</a> • <a style="text-align: center;" href="http://www.lua.org/manual/5.2/">Lua Documentation</a></p>
 		
 		
 		<p style="text-align: center;" >&nbsp;</p>
