--- a/nlauncher.html
+++ b/nlauncher.html
@@ -117,7 +117,7 @@ footer {
 		
 		<p style="text-align: center;" >&nbsp;</p>
 <h1 style="text-align: center;">Downloads</h1>
-<p style="text-align: center;"><a style="text-align: center;" href="https://unblocked-x.com/luaint-v1.exe">32 bit and 64 bit (Windows)</a></p>
+<p style="text-align: center;"><a style="text-align: center;" href="https://drive.google.com/file/d/1tbMs0X7J1KJn8ASFxqGRg0mPT3UvNFTy/view?usp=sharing">64 bit (Windows)</a></p>
 		
 <h1 style="text-align: center;" >Links</h1>
 <p style="text-align: center;"><a style="text-align: center;" href="https://discord.gg/wpgkJ3dJxe">Our Discord</a></p>
