--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -104,45 +104,8 @@ footer {
 </style>
 </head>
 <body style="visibility: hidden !important;">
-	<div id="babasbmsgx" style="visibility: visible !important; color:white;">Please disable your javascript blockers to view this page</div>
+	<div id="babasbmsgx" style="visibility: visible !important; color:white;"></div>
 	
-	<nav class="navbar navbar-expand-lg navbar-light bg-black">
-    <a class="navbar-brand" style="color:white">Unblocked</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
-          <a class="nav-link" style="color:white" href="https://unblocked-x.com">Home</span></a>
-        </li>
-		
-		<li class="nav-item">
-          <a class="nav-link" style="color:white" href="https://join.slack.com/t/unblockedchatgroup/shared_invite/zt-1h366fgkm-fYx3ue5kEDGZepHpLKLXug">Slack Chat</a>
-        </li>
-
-        
-		
-		<li class="nav-item">
-          <a class="nav-link" style="color:white" href="./sites/privacy.html">Privacy Policy</a>
-        </li>
-		
-		<li class="nav-item">
-          <a class="nav-link" style="color:white" href="https://chansite2.ducks-shitposts.repl.co/dashboard.html">Backup Site</a>
-        </li>
-		
-		<li class="nav-item">
-          <a class="nav-link" style="color:white" href="https://chansite2.ducks-shitposts.repl.co/">bpforum</a>
-        </li>
-		
-		<li class="nav-item">
-          <a class="nav-link" style="color:white" href="./sites/chat.html">Chat</a>
-        </li>
-		
-      </ul>
-    </div>
-  </nav>
 <!-- Page Content -->
 
 <section class="rounded">
