--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -128,19 +128,49 @@ footer {
 		<div class="card" style="width: 50rem;display:inline-block; background-color: #000;">
   <div class="card-body">
     <h5 class="card-title">Obama made interesting statements in his recent interview!<span class="badge bg-secondary">New</span> </h5>
-    <p class="card-text">Here are quotes from his recent speech:
+    <p class="card-text"><p>In Donald Trump's recent speech, he said:</p>
 
-"... Tonight, I am here to say, to South Sudanese, to Liberians, to residents of countries ravaged by natural disaster, to my fellow Americans: when we face hard times, we will persevere.
+<p>&quot;And I will tell you this, that, Russia, if you're listening, I hope you're able to find the 30,000 emails that are missing. I think you will probably be rewarded mightily by our press.&quot;</p>
 
-Yes, there will be difficult days ahead. And there will be times when we seem frustratingly alone. But if we persevere, then history tells us we will change the world for the better, we will make our nation and our world a better place."
+<p>He also added:</p>
 
-He then addressed the current crisis in the Middle East:
+<p>&quot;I hope you're able to find them, but if you did, you'll be the most celebrated person in the world.&quot;</p>
 
-"... When I came to office, Iraq was facing a violent insurgency led by al Qaeda. And by the end of my first term, that insurgency was degraded. Thousands of Americans had been killed. Iraq had turned the page on tyranny and violence, and there was a sense of hope in Baghdad and Anbar. But now, ISIL has emerged, and ISIS threatens what was once the center of the Iraqi people: their country. And if we do not act, we know that these terrorists are likely to metastasize to other countries, spreading death and destruction. This threat is serious, but so is our response. So today, I have a message for the Iraqi government, for the Iranian government, and for every other government across the Middle East, and across the world: the United States will not wait forever. America will act, and act decisively. That's the difference between just dealing with problems and dealing with those problems effectively."
+<p>Following the remarks, one line grabbed attention above the rest, the one which makes out &quot;would be&quot; to mean &quot;will be.&quot;</p>
 
-"... But the scourge of the Middle East is not just an attack on Iraq, or Iran, or even the Persian Gulf. It's a threat that threatens every country in this room and every place in the world. It threatens the security of our allies, and it threatens the security of the United States of America. And these are problems that are here to stay. And we cannot and we should not hide from them. And we cannot fix them if we want to rebuild our economy, or build our schools, or create jobs for our people."
+<p>Donald Trump, as a means of defence against a possible hacking of email account of Hillary Clinton, intended to encourage Russian hackers to spy and find the 30,000 deleted emails. &quot;Would be&quot; is not a promise, it's a vague statement of hope. While a well known principle of all writers is to avoid ambiguity, there are occasions when being as clear as possible is the best option. In this case, it is best to simply say that Trump wants Russia to hack Hillary's email accounts.</p>
 
-He then discussed ISIS:</p>
+<p>Prior to her campaign for presidency, Hillary Clinton had a personal email server to store her email files, and a personal computer to store personal files. These were also reportedly hacked. Is this a coincidence?</p>
+
+<p>Hacking Hillary Clinton's emails would present serious security concerns and perhaps give credence to Trump's fears of a foreign espionage plot against the US government. This is highly improbable.</p>
+
+<p>For the last 18 months, US intelligence agencies have suspected that the Kremlin is behind hacks on political parties and senior officials in the US, from the DNC to various organizations and businesses. The US has described these hacks as &quot;cyber-attacks&quot;, and has blamed Russia as the source.</p>
+
+<p>Hacking emails would certainly help to substantiate these suspicions. But, given the impact of Hillary Clinton's email server security on the legitimacy of her campaign, would hackers really want to enter her personal email system?</p>
+
+<p>Let's look at the possibility of an email hack. Hacking Hillary Clinton's emails would present serious security concerns and perhaps give credence to Trump's fears of a foreign espionage plot against the US government. This is highly improbable.</p>
+
+<p>Let's imagine a scenario where someone can obtain all of Hillary's emails. A common scenario is that the person who gained access to Hillary's email server used a powerful scanning program to get all of the emails. That person could then work out how to use the computer system to access email, and then use that program to steal the emails. Then the email hacker would have access to all of Clinton's emails and would probably use these to defame her. The email hacker would need to gain access to Clinton's email server to be able to do this. It is not a high-level hacking job, which requires a person with significant hacking skills and resources.</p>
+
+<p>In addition, no email hacker can guarantee that they would not be identified and targeted by authorities. They are likely to be pursued by intelligence agencies such as the FBI. The email hacker would also be subject to prosecution, and could be easily extradited to America. This means that the person who gets into Hillary Clinton's email system would be someone with considerable hacking skills, and the resources to evade the authorities.</p>
+
+<p>If Trump believes that a Russian hacking of Clinton's emails is a good option to get rid of Clinton, he should keep his own emails safe, since this is almost certainly not going to happen.</p>
+
+<p>But why would a person with little hacking skills, whose password could be easily discovered, want to hack Clinton's email server? In other words, who would want to hack Hillary's email system? Clearly, it is not a high-level hacking job, which requires a person with significant hacking skills and resources.</p>
+
+<p>The likelihood of Hillary's email server being hacked is so low, that it is difficult to see how Trump's promise to have the Russians find the emails would be effective.</p>
+
+<p>Is Donald Trump planning to follow through on his warning to Russian hackers? The likely answer is no. However, he seems to be concerned that the DNC hacks may lead to compromising emails.</p>
+
+<p>&quot;I hope you're able to find them, but if you did, you'll be the most celebrated person in the world.&quot;</p>
+
+<p>The DNC leaks were meant to further discredit the Democratic party, especially its presidential candidate. If Donald Trump or anyone else gets access to these emails, they would be almost certainly used to try to discredit the Democratic party's candidate for the US presidential election, Hillary Clinton.</p>
+
+<p>However, Trump's recommendation of a &quot;very successful and famous hacker&quot;, suggests he may not have considered what might happen if the hacker got into Clinton's email server. One could not blame him for not knowing that one of his party's most senior officials had held a secret, unsecured email server in her home.</p>
+
+<p>Perhaps Trump's advice is not entirely intended as advice, but rather as a provocation? Trump appears to believe that Clinton's email server was compromised. &quot;If she loses the election, the real scandal for the world would be the vast number of her emails on there that were hacked,&quot; he said in his statement to Fox News.</p>
+
+<p>No hacking was done, and a hacker would not be able to find any hacked Clinton emails.</p></p>
   </div>
 </div>
 
