--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -116,7 +116,7 @@ footer {
 		
 		<div class="card" style="width: 50rem;display:inline-block; background-color: #000;">
   <div class="card-body">
-    <h5 class="card-title">Obama made interesting statements in his recent interview!<span class="badge bg-secondary">New</span> </h5>
+    <h5 class="card-title">Donald Trump's recent speech leaves listeners shocked!<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text"><p>In Donald Trump's recent speech, he said:</p>
 
 <p>&quot;And I will tell you this, that, Russia, if you're listening, I hope you're able to find the 30,000 emails that are missing. I think you will probably be rewarded mightily by our press.&quot;</p>
