--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -43,7 +43,7 @@
 <nav class="navbar navbar-default"> </nav>
 	
 body, h1, h2, h3, h4, h5, h6, a{
-  font-family: Oswald;
+  font-family: 'Special Elite';
 }
 
 h1, h2, h3, h4, h5, h6, a, p{
