--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -86,7 +86,7 @@ section::after {
 
 /* Style the footer */
 footer {
-  background-color: #000;
+  background-color: white;
   padding: 10px;
   text-align: center;
   color: black;
