--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -115,7 +115,7 @@ footer {
 		<p>You can contact us here: info@unblocked-x.com</p>
 		<p>&nbsp;</p>
 		
-		<div class="card" style="width: 50rem;display:inline-block; background-color: white;">
+		<div class="card" style="width: 50rem;display:inline-block; background-color: #F5FFFA;">
   <div class="card-body">
     <h5 class="card-title">Donald Trump's recent speech leaves listeners shocked!<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text"><p>In Donald Trump's recent speech, he said:</p>
