--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -115,9 +115,9 @@ footer {
 		<p>You can contact us here: info@unblocked-x.com</p>
 		<p>&nbsp;</p>
 		
-		<div class="card" style="width: 50rem;display:inline-block; background-color: #F5FFFA;">
+		<div class="card" style="width: 50rem;display:inline-block; background-color: #FDF5E6;">
   <div class="card-body">
-    <h5 class="card-title">Donald Trump's recent speech leaves listeners shocked!<span class="badge bg-secondary">New</span> </h5>
+    <h5 class="card-title">Donald Trump's recent speech leaves listeners shocked!</h5>
     <p class="card-text"><p>In Donald Trump's recent speech, he said:</p>
 
 <p>&quot;And I will tell you this, that, Russia, if you're listening, I hope you're able to find the 30,000 emails that are missing. I think you will probably be rewarded mightily by our press.&quot;</p>
@@ -161,6 +161,45 @@ footer {
 <p>Perhaps Trump's advice is not entirely intended as advice, but rather as a provocation? Trump appears to believe that Clinton's email server was compromised. &quot;If she loses the election, the real scandal for the world would be the vast number of her emails on there that were hacked,&quot; he said in his statement to Fox News.</p>
 
 <p>No hacking was done, and a hacker would not be able to find any hacked Clinton emails.</p></p>
+  </div>
+</div>
+	
+	<div class="card" style="width: 50rem;display:inline-block; background-color: #FDF5E6;">
+  <div class="card-body">
+    <h5 class="card-title">Obama's recent speech leaves listeners baffled!</h5>
+    <p class="card-text"><p>Here are quotes from his recent speech:</p>
+
+<p>&quot;... Tonight, I am here to say, to South Sudanese, to Liberians, to residents of countries ravaged by natural disaster, to my fellow Americans: when we face hard times, we will persevere.</p>
+
+<p>Yes, there will be difficult days ahead. And there will be times when we seem frustratingly alone. But if we persevere, then history tells us we will change the world for the better, we will make our nation and our world a better place.&quot;</p>
+
+<p>He then addressed the current crisis in the Middle East:</p>
+
+<p>&quot;... When I came to office, Iraq was facing a violent insurgency led by al Qaeda. And by the end of my first term, that insurgency was degraded. Thousands of Americans had been killed. Iraq had turned the page on tyranny and violence, and there was a sense of hope in Baghdad and Anbar. But now, ISIL has emerged, and ISIS threatens what was once the center of the Iraqi people: their country. And if we do not act, we know that these terrorists are likely to metastasize to other countries, spreading death and destruction. This threat is serious, but so is our response. So today, I have a message for the Iraqi government, for the Iranian government, and for every other government across the Middle East, and across the world: the United States will not wait forever. America will act, and act decisively. That's the difference between just dealing with problems and dealing with those problems effectively.&quot;</p>
+
+<p>&quot;... But the scourge of the Middle East is not just an attack on Iraq, or Iran, or even the Persian Gulf. It's a threat that threatens every country in this room and every place in the world. It threatens the security of our allies, and it threatens the security of the United States of America. And these are problems that are here to stay. And we cannot and we should not hide from them. And we cannot fix them if we want to rebuild our economy, or build our schools, or create jobs for our people.&quot;</p>
+
+<p>He then discussed ISIS:</p>
+
+<p>&quot;... We should use the leverage we have to put conditions on Iran, to make it clear to them that the door to negotiations with the United States, that the door to a negotiated settlement, that the door to using nuclear power, is open. And I'm prepared to go to Congress for a new round of sanctions if Iran does not take these steps. We should take an approach of strength and resolve. We must crush ISIL's caliphate in Iraq and Syria. We must take the fight to them. If you are going to take on a movement like ISIL, you can't be afraid to recruit local forces to do the work for you. The Iraqis must take the lead in this, and we should provide them the training, the equipment, the support they need. We should pursue a new strategy in Iraq and Syria. If we've learned one thing in Iraq, it's this: when we pursue a counter-ISIL strategy, it has to be an inclusive strategy that deals with Iraqi leadership and Syrian leadership, it deals with Sunnis and Shia, Kurds and Christians, Kurds and Turkmen, secularists and Islamists. When we're in the business of changing regimes, it has to be done through the inclusive politics of building consent. We don't leave anyone behind. That includes ending counterproductive sanctions that have been imposed for many years, and begin restoring our relationship with Turkey. And we should acknowledge the vital role that Qatar, and Turkey, and other Gulf partners can and should play in helping to stabilize areas liberated from ISIL.&quot;</p>
+
+<p>He then discussed progress on domestic issues:</p>
+
+<p>&quot;... And it's worth mentioning that during this time of hardship and danger and chaos in the Middle East, we have seen in our own country, we have seen in this state a clear choice about where the country goes next. In New Hampshire last week, one of the leading candidates for President said that, we should ignore a lot of the things that we know are wrong with the criminal justice system and lock up more people. Now, I am a big believer in the rule of law, I'm a big believer in second chances. We have a moral obligation to rehabilitate prisoners, to reform offenders, and to promote a new generation of lives of dignity and hope and opportunity. But sometimes, we've got to do better than that. We've got to look at the facts. And in New Hampshire, we saw the evidence of racial bias in our criminal justice system. But a lot of people think that because one prosecutor is coming forward and saying we have a problem, and it's in our state, that all prosecutor's offices in America are racist. I don't believe that.&quot;</p>
+
+<p>&quot;The fact is, no one is saying that prosecutor's offices are all racist. What I am saying is, what happened in New Hampshire is a clear sign of a problem and people should be more concerned. The president has met with our nation's governors, he has been to dozens of communities across this country, and has heard from police, and sheriffs, and prosecutors. And his message is this: that despite this progress we've made on criminal justice reform, we're seeing it stall at the federal level. Our best hope of reversing some of the trend lines are on state and local levels. And the good news is, there are signs of progress in more and more places, and we should do everything we can to build on that progress, to make it stronger, to make sure that what happened in New Hampshire is the exception, and not the rule, that is a far more accurate assessment of what we see happening in our system.&quot;</p>
+
+<p>Mr. Obama also discussed climate change:</p>
+
+<p>&quot;Here in Washington, we've talked a lot about climate change. We talk a lot about the need to combat climate change. But too often, we settle for incremental steps. We think that these policies will have little effect, or they're the right policies but they're not going to have a big effect. We need a new national urgency. That's why I've put a lot of energy behind a package of new energy efficiency standards for commercial buildings, new standards to cut carbon pollution from power plants, a $20 billion spending program to jump-start clean energy innovation in America, new efforts to fight climate change overseas, and to help communities prepare for its effects here at home. So on all of these issues, I do not accept the argument that we should give up trying to solve the climate crisis, or should abandon those communities who are already suffering the devastating effects of drought, or rising seas, or raging wildfires. I will not accept the argument that we should abandon our commitment to our military men and women in uniform, who are working around the world to protect us from harm, and who are asking every day why we cannot do more about the threat of climate change. It is, after all, part of their DNA, this fundamental truth that global warming is an urgent threat to our security, and to the security of future generations. And so we will not accept the idea that we can cut our way to long term energy independence. And we will not abandon our efforts to invest in the research and development that is going to lead to new technologies and new discoveries. That's the foundation for the kinds of breakthroughs we need to solve this problem.&quot;</p>
+
+<p>The president says he thinks the recent shootings at a Sikh temple in Wisconsin are &quot;terrorism.&quot; (Emphasis mine)</p>
+
+<p>&quot;What we know is, when individuals get it into their heads that they want to hurt people, they will get it into their heads that they can do so, in any number of ways, and they do. And those of us who are parents have no trouble understanding that. We've all had our kids begging for things, whining for things. But that's not a justification for committing an act of violence. So that's why we've got to work with every single member of this community to make sure that we're making it as difficult as possible for those individuals who think that violence is the answer to their problems to get their hands on a weapon.&quot;</p>
+
+<p>The president also discussed the early release of a prisoner:</p>
+
+<p>&quot;Last week, a federal judge ordered the immediate release of Alfonso Rodriguez. Rodriguez was sentenced to 26 years in prison for his role in an assault in which a relative of ours was killed. Rodriguez was not only a first time offender, but he was only 20 years old when the crime was committed. He has now served nearly 20 years in prison, nearly 10 years more than the maximum penalty permitted by law. He will be released on March 3rd. The judge ruled that Rodriguez has served more than enough time to have his sentence commuted, and rightly so. But the problem with this is, only weeks before Rodriguez will be released, we still don't have a criminal justice system that works fairly and consistently to actually prosecute violent crimes like gun violence effectively.&quot;</p></p>
   </div>
 </div>
 
