--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -167,7 +167,7 @@ footer {
 	<div class="card" style="width: 50rem;display:inline-block; background-color: #FDF5E6;">
   <div class="card-body">
     <h5 class="card-title">Obama's recent speech leaves listeners baffled!</h5>
-    <p class="card-text"><p>Here are quotes from his recent speech:</p>
+    <p class="card-text"><p>Here are quotes from the speech in question:</p>
 
 <p>&quot;... Tonight, I am here to say, to South Sudanese, to Liberians, to residents of countries ravaged by natural disaster, to my fellow Americans: when we face hard times, we will persevere.</p>
 
