--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -115,7 +115,7 @@ footer {
 		<p>You can contact us here: info@unblocked-x.com</p>
 		<p>&nbsp;</p>
 		
-		<div class="card" style="width: 40rem;display:inline-block; background-color: #FDF5E6;">
+		<div class="card" style="width: 40rem;display:inline; background-color: #FDF5E6;">
   <div class="card-body">
     <h5 class="card-title">Donald Trump's recent speech leaves listeners shocked!</h5>
     <p class="card-text"><p>In Donald Trump's recent speech, he said:</p>
@@ -164,7 +164,7 @@ footer {
   </div>
 </div>
 	
-	<div class="card" style="width: 40rem;display:inline-block; background-color: #FDF5E6;">
+	<div class="card" style="width: 40rem;display:inline; background-color: #FDF5E6;">
   <div class="card-body">
     <h5 class="card-title">Obama's recent speech leaves listeners baffled!</h5>
     <p class="card-text"><p>Here are quotes from the speech in question:</p>
