--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -115,6 +115,48 @@ footer {
 		<p>You can contact us here: info@unblocked-x.com</p>
 		<p>&nbsp;</p>
 		
+		
+		<div class="card" style="width: 40rem;display:inline-block;vertical-align:top;  background-color: #FDF5E6;">
+  <div class="card-body">
+    <h5 class="card-title">Russia is hacking the stock market to post images of cats!</h5>
+    <p class="card-text"><p>Russia is hacking the stock market to post images of cats! There is one thing Russians can do that Americans can&rsquo;t: Google &ldquo;cat&rdquo; and then click on &ldquo;millions of pictures&rdquo; of cats.</p>
+
+<p>A recent Russian scheme has even involved hacking the stock market, and posting &ldquo;cat&rdquo; images, as reported by Kommersant, which is a major Russian newspaper.</p>
+
+<p>When the attack occurred, the malware in the system was disguised as a stock ticker. When the stock ticker went to &ldquo;watches data,&rdquo; the &ldquo;cat&rdquo; image appeared at the top.</p>
+
+<p>&ldquo;The terrorists have been hacking the trading system of state-run Russian company OAO Alfa-Bank,&rdquo; the source said. &ldquo;The hackers placed images of a cat &ndash; sitting in a chair, yawning, touching a mobile phone screen &ndash; in the place of the real data on a page.&rdquo;</p>
+
+<p>Apparently, this has been a hack-off since May.</p>
+
+<p>The attack first occurred May 26. However, the source has no information about the origin of the attack.</p>
+
+<p>&ldquo;The firm in charge of the trading system of OAO Alfa-Bank got an alert about the presence of the malware on Friday evening. The cyber-security firm Antispto had concluded that the cats don&rsquo;t represent anything financial and they do not have any political motives. The firm decided to leave the screens empty of content. On Saturday night the system of OAO Alfa-Bank developed an algorithm for the automatic disposal of the images.&rdquo;</p>
+
+<p>According to the source, the company decided to just delete the pictures instead of trying to trace them back to the hackers. However, when the company turned its eye to the company&rsquo;s own IT security, the picture of the cat had already been deleted.</p>
+
+<p>&ldquo;During the review of the company&rsquo;s IT security, it was discovered that several other IT specialists were trying to download and copy the hacked text on stock market trading screens. The financial service firm&rsquo;s security guard quickly noticed the security breach, and removed the screens from their stations.&rdquo;</p>
+
+<p>The source also told Kommersant that in order to be successful in a cyber-attack, a hacker must first gain access to a computer network.</p>
+
+<p>&ldquo;The same group has attacked several other Russian banks, the source said, without providing further details. This is probably the same gang that is attacking OAO Alfa-Bank and other Russian financial institutions,&rdquo; according to Kommersant.</p>
+
+<p>The source also said there was nothing of a political nature in the messages posted on the screens.</p>
+
+<p>&ldquo;A hacker used a Russian image of a cat and a text [that was] written in traditional Cyrillic script: &lsquo;My love, look here. There are important announcements about the state-controlled Russian company Alfa-Bank. I am sure you already heard about the news from media.&rsquo;&rdquo;</p>
+
+<p>&ldquo;The text was a screenshot from a news website which publishes news about the company.&rdquo;</p>
+
+<p>The news about the hackers, however, has not been widely publicized, apparently to avoid adding to the conspiratorial beliefs that Vladimir Putin has staged a financial crisis to allow Russian people to learn how to ride the stock market.</p>
+
+<p>The source told Kommersant that the pictures of the cat were also posted on the trading screens of other Russian banks.</p>
+
+<p>&ldquo;These details were also published on the social network where people regularly share their purchases and information about the stock market,&rdquo; according to the source.</p></p>
+  </div>
+</div>
+		
+		
+		
 		<div class="card" style="width: 40rem;display:inline-block;vertical-align:top;  background-color: #FDF5E6;">
   <div class="card-body">
     <h5 class="card-title">Donald Trump's recent speech leaves listeners shocked!</h5>
