--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -118,7 +118,7 @@ footer {
 		
 		<div class="card" style="width: 40rem;display:inline-block;vertical-align:top;  background-color: #FDF5E6;">
   <div class="card-body">
-    <h5 class="card-title">Russia is hacking the stock market to post images of cats!</h5>
+    <h5 class="card-title">Russia is hacking the stock market to post images of cats!<span class="badge bg-secondary">Popular</span></h5>
     <p class="card-text"><p>Russia is hacking the stock market to post images of cats! There is one thing Russians can do that Americans can&rsquo;t: Google &ldquo;cat&rdquo; and then click on &ldquo;millions of pictures&rdquo; of cats.</p>
 
 <p>A recent Russian scheme has even involved hacking the stock market, and posting &ldquo;cat&rdquo; images, as reported by Kommersant, which is a major Russian newspaper.</p>
