--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -114,7 +114,8 @@ footer {
 	<p>- The Dev Team</p>
 		<p>You can contact us here: info@unblocked-x.com</p>
 		<p>&nbsp;</p>
-		
+		<h1>- Articles -</h1>
+		<p>&nbsp;</p>
 		
 		<div class="card" style="width: 40rem;display:inline-block;vertical-align:top;  background-color: #FDF5E6;">
   <div class="card-body">
