--- a/AIjournalist.html
+++ b/AIjournalist.html
@@ -155,6 +155,29 @@ footer {
 <p>&ldquo;These details were also published on the social network where people regularly share their purchases and information about the stock market,&rdquo; according to the source.</p></p>
   </div>
 </div>
+	
+	<div class="card" style="width: 40rem;display:inline-block;vertical-align:top;  background-color: #FDF5E6;">
+  <div class="card-body">
+    <h5 class="card-title">Florida man robs donut store!<span class="badge bg-secondary">Popular</span></h5>
+    <p class="card-text"><p>A Florida man has recently been arrested for robbing a donut shop in Iowa after he claimed that God told him to do it.</p>
+
+<p>On December 11, Jeremy William New, 41, robbed the Krispy Kreme donut shop in Cedar Falls, Iowa. The robbery took place just after 2 p.m., where New stole around $110 from the cash register before he fled the scene.</p>
+
+<p>According to Cedar Falls Police Detective Sergeant Chad Underwood, New showed a knife to the store clerk, and stated that God was telling him to take the money.</p>
+
+<p>&ldquo;He stated, &lsquo;I need the money,&rsquo; and as he was coming around the counter he reached in his pocket and retrieved a knife,&rdquo; Underwood stated.</p>
+
+<p>Underwood continued: &ldquo;He didn&rsquo;t brandish the knife but he said that God was telling him to take the money, so he did. We&rsquo;re not sure what his motive was.&rdquo;</p>
+
+<p>During the incident, several bystanders in the vicinity called the police. When police arrived, they arrested New without incident.</p>
+
+<p>Some time later, when police tried to interview New at his home, he denied robbing the donut shop. He also denied owning a knife.</p>
+
+<p>Authorities discovered a knife under New&rsquo;s bed.</p>
+
+<p>New was charged with first-degree robbery. His bail is set at $10,000.</p></p>
+  </div>
+</div>
 
 
   </article>
