--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ footer {
 	<a class="btn btn-primary" href="https://ko-fi.com/jerrytoaster556" role="Donate">Donate</a>
         <p>&nbsp;</p>
 		
-		<h1><span style="text-decoration: underline;">Made by us</span></h1>
+		<h1><span style="text-decoration: underline;">PICO-8 Games</span></h1>
 		<p>&nbsp;</p>
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
