--- a/index.html
+++ b/index.html
@@ -169,6 +169,15 @@ footer {
     <p class="card-text">Play defcry Now</p>
     <a href="https://unblocked-x.com/sites/defcry/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
+			
+			<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://unblocked-x.com/assets/iMCqPN.gif" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">The Lair<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play The Lair Now</p>
+    <a href="https://unblocked-x.com/sites/thelair/thelair.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+			
 </div>
 		
 				
