--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ footer {
   </div>
 			
 			<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://unblocked-x.com/assets/iMCqPN.gif" class="card-img-top" alt="...">
+  <img src="https://i.ytimg.com/vi/c1t__dzrJVo/maxresdefault.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">The Lair<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play The Lair Now</p>
