--- a/index.html
+++ b/index.html
@@ -203,6 +203,15 @@ footer {
   </div>
 </div>
 		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://unblocked-x.com/assets/buz.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Buzzkill<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Buzzkill Now</p>
+    <a href="https://unblocked-x.com/sites/buzzkill/buzzkill.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
 				
 <h1><span style="text-decoration: underline;">Board Games</span></h1>
 		<p>&nbsp;</p>
