--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ footer {
 </div>
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
-  <img src="https://unblocked-x.com/assets/buz.png" class="card-img-top" alt="...">
+  <img src="https://unblocked-x.com/assets/buz.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Buzzkill<span class="badge bg-secondary">New</span> </h5>
     <p class="card-text">Play Buzzkill Now</p>
