--- a/index.html
+++ b/index.html
@@ -174,6 +174,15 @@ footer {
     <a href="https://unblocked-x.com/sites/defcry/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://unblocked-x.com/assets/suc.gif" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Succer<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Succer Now</p>
+    <a href="https://unblocked-x.com/sites/succer/succer.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
 			
 			<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://i.ytimg.com/vi/c1t__dzrJVo/maxresdefault.jpg" class="card-img-top" alt="...">
