--- a/index.html
+++ b/index.html
@@ -176,6 +176,16 @@ footer {
 </div>
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://unblocked-x.com/assets/villager.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Villager<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Villager Now</p>
+    <a href="https://unblocked-x.com/sites/villager/villager.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://unblocked-x.com/assets/pcraft.gif" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">PCRAFT<span class="badge bg-secondary">New</span> </h5>
