--- a/index.html
+++ b/index.html
@@ -175,6 +175,15 @@ footer {
   </div>
 </div>
 		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://unblocked-x.com/assets/celeste.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Celeste<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Celeste Now</p>
+    <a href="https://unblocked-x.com/sites/celeste/celeste.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://unblocked-x.com/assets/pracer.gif" class="card-img-top" alt="...">
