--- a/index.html
+++ b/index.html
@@ -176,6 +176,15 @@ footer {
 </div>
 		
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://unblocked-x.com/assets/birds.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Birds with Guns<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play BWG Now</p>
+    <a href="https://unblocked-x.com/sites/birds/birds.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>
+		
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://unblocked-x.com/assets/patshooter.jpg" class="card-img-top" alt="...">
   <div class="card-body">
     <h5 class="card-title">Pat Shooter<span class="badge bg-secondary">New</span> </h5>
