--- a/index.html
+++ b/index.html
@@ -174,7 +174,15 @@ footer {
     <a href="https://unblocked-x.com/sites/defcry/index.html" class="btn btn-primary" target="_blank">Play Now</a>
   </div>
 </div>
-		
+	
+		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
+  <img src="https://unblocked-x.com/assets/zombiegarden.png" class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Zombie Garden<span class="badge bg-secondary">New</span> </h5>
+    <p class="card-text">Play Zombie Garden Now</p>
+    <a href="https://unblocked-x.com/sites/zombiegarden/zombiegarden.html" class="btn btn-primary" target="_blank">Play Now</a>
+  </div>
+</div>	
 		<div class="card" style="width: 18rem;display:inline-block; background-color: #000;">
   <img src="https://unblocked-x.com/assets/picotetris.png" class="card-img-top" alt="...">
   <div class="card-body">
